--- a/tex/seq64_rc_file.tex
+++ b/tex/seq64_rc_file.tex
@@ -6,7 +6,7 @@
 % \library     Documents
 % \author      Chris Ahlstrom
 % \date        2015-08-31
-% \update      2015-11-07
+% \update      2015-11-08
 % \version     $Revision$
 % \license     $XPC_GPL_LICENSE$
 %
@@ -498,6 +498,7 @@ erroneously, have also specified 3 MIDI busses that we do not have, in the
       1             # show_ui_sequence_key (1=true/0=false)
       32            # space start sequencer
       65307         # Escape stop sequencer
+      0 #  show sequence numbers (1 = true / 0 = false);  ignored in legacy mode
    \end{verbatim}
 
 \subsection{Sequencer64 / JACK Transport}
