--- a/README
+++ b/README
@@ -1,6 +1,6 @@
 Sequencer64 User Manual
 Chris Ahlstrom
-2015-11-01 to 2015-11-01
+2015-11-01 to 2015-11-10
 
 This project provides two things:
 
@@ -18,11 +18,11 @@ Sequencer64 is now a necessity.
 
 Here are some of the new features of Sequencer64:
 
-   -  More mouse and keystroke support in the sequence editor window:
+   -  More mouse and keystroke support in the sequence and song editor windows:
       -  Ability to move selected notes using the arrow keys.
-      -  Better explanation of existing keystroke support for that window.
+      -  Better explanation of existing keystroke support for those windows.
       -  Additional keystroke support found by Googling for seq24 all around
-         the Internet.
+         the Internet.  For example, "p" for entering "paint" (draw) mode.
       -  Ability to use the Mod4/Super/Windows key to keep editing (painting)
          mode enabled after release the right mouse button, to better support
          some of the modern crappy touchpads shipped with laptops.  This
@@ -38,11 +38,10 @@ Here are some of the new features of Sequencer64:
 To recreate the PDF file (the latest version is stored in the "pdf"
 directory), you will need to install GNU make, latexmk, tex-live, pdf2latex,
 and other resources related to LaTeX and PDF support.  If everything is
-in place, then change to the "tex" directory, and a simple "make" command
-will create the document.
+in place, then a simple "make" command will create the PDF document.
 
 "make clean" in the top-level directory or the "tex" directory will remove
-all of the generated products.
+all of the generated products (except for the PDF).
 
 Lastly, although this manual is well underway, it needs a lot of work and
 a lot of help!  It is still a work in progress.
