--- a/tex/sequencer64-user-manual.tex
+++ b/tex/sequencer64-user-manual.tex
@@ -6,7 +6,7 @@
 % \library     Documents
 % \author      Chris Ahlstrom
 % \date        2015-11-01
-% \update      2015-11-06
+% \update      2015-11-10
 % \version     $Revision$
 % \license     $XPC_GPL_LICENSE$
 %
@@ -344,6 +344,11 @@
 % Discussion of MIDI formats related to Seq24 and Sequencer64
 
 \input{seq64_midi_formats}
+
+% Detailed discussion of how internal variables alter the appearance
+% of Sequencer64.
+
+\input{seq64_metrics}
 
 \section{Summary}
 \label{sec:summary}
