--- a/tex/seq64_pattern_editor.tex
+++ b/tex/seq64_pattern_editor.tex
@@ -6,7 +6,7 @@
 % \library     Documents
 % \author      Chris Ahlstrom
 % \date        2015-08-31
-% \update      2015-11-06
+% \update      2015-11-12
 % \version     $Revision$
 % \license     $XPC_GPL_LICENSE$
 %
@@ -297,6 +297,11 @@
    Note that changing the \textbf{Key} will also shift the marked notes
    for the \textbf{Musical Scale} setting.
 
+   \textbf{New:}
+   \index{new!save key}
+   With \textsl{Sequencer64 v. 0.9.9.7}, the key that a sequence is set to is
+   now saved in the MIDI file along with the rest of the data for the sequence.
+
    \itempar{Musical Scale}{pattern editor!scale}
    Selects the desired scale for the pattern.
    Originally, only the following scales were supported: Off, Major, and Minor.
@@ -341,6 +346,11 @@
    recording.  Note that the scale will shift when a different
    \textbf{Key} is selected.
 
+   \textbf{New:}
+   \index{new!save scale}
+   With \textsl{Sequencer64 v. 0.9.9.7}, the scale that a sequence is set to is
+   now saved in the MIDI file along with the rest of the data for the sequence.
+
    \itempar{Background Sequence}{pattern editor!background sequence}
    One can select another pattern to draw on the background to help with
    writing corresponding parts.
@@ -367,6 +377,12 @@
 \end{figure}
 
    The dark cyan notes shown represent a rhythm pattern.
+
+   \textbf{New:}
+   \index{new!save background seqeuence}
+   With \textsl{Sequencer64 v. 0.9.9.7}, the background seqeuence that a
+   sequence shows is now saved in the MIDI file along with the rest of the
+   data for the sequence.
 
 \subsection{Pattern Editor / Piano Roll}
 \label{subsec:seq64_pattern_editor_piano_roll}
