--- a/tex/seq64_menu.tex
+++ b/tex/seq64_menu.tex
@@ -6,7 +6,7 @@
 % \library     Documents
 % \author      Chris Ahlstrom
 % \date        2015-08-31
-% \update      2015-11-08
+% \update      2015-11-22
 % \version     $Revision$
 % \license     $XPC_GPL_LICENSE$
 %
@@ -223,7 +223,7 @@
       \item The setting of the "manual ALSA ports" option,
          \texttt{--manual\_alsa\_ports} command-line option or the
          \texttt{[manual-alsa-ports]} section of the
-         \texttt{sequencer64rc} configuration file, as described in
+         \texttt{sequencer64.rc} configuration file, as described in
          \sectionref{subsec:seq64_rc_file_other_midi}
    \end{itemize}
 
@@ -644,8 +644,8 @@
    This is just like pressing the right mouse button, but the draw/paint mode
    sticks (as if the Mod4 mode were in force).
    To get out of the paint mode, press the
-   \index{keys!P}
-   "P" (shift-p) key while in the sequence editor.
+   \index{keys!x}
+   "x" key while in the sequence editor.
    These keys, however, do not work (currently) while the sequence is playing.
 
    \index{todo:extend mouse support}
