--- a/tex/seq64_midi_formats.tex
+++ b/tex/seq64_midi_formats.tex
@@ -26,7 +26,7 @@
    precede it include the SeqSpec ("sequencer-specific", sort of)
    control tags shown in \tableref{table:seqspec_items_normal_tracks}.
    These control tags are global constants in the \textsl{Seq24} source
-   code, ranging from 0x24240001 to 0x24240013..
+   code, ranging from 0x24240001 to 0x24240013.
 
    \begin{table}[htb]
       \centering
@@ -38,8 +38,8 @@
          \texttt{c\_triggers}       & \texttt{24 24 00 04 00 00 00 00} \\
          \texttt{c\_timesig}        & \texttt{24 24 00 06 00 00 00 00} \\
          \texttt{c\_triggers\_new}  & \texttt{24 24 00 08 00 00 00 00} \\
-         \texttt{c\_musickey}       & \texttt{24 24 00 11 00 00 00 00} \\
-         \texttt{c\_musicscale}     & \texttt{24 24 00 12 00 00 00 00} \\
+         \texttt{c\_musickey}       & \texttt{24 24 00 11 00} \\
+         \texttt{c\_musicscale}     & \texttt{24 24 00 12 00} \\
          \texttt{c\_backsequence}   & \texttt{24 24 00 13 00 00 00 00} \\
       \end{tabular}
    \end{table}
@@ -54,6 +54,8 @@
    control tags are new with \textsl{Sequencer64} v. 0.9.9.7.
    They are now saved as additional information in each sequence in which they
    have been specified in the sequence editor.
+   However, for backward compatibility, these items will eventually be able to
+   be save globally for the MIDI song, as an option.
 
    Note that these tags (created by the application, but not present in the
    proprietary track, and perhaps also created by other MIDI applications) are
@@ -88,9 +90,11 @@
    most applications accept the shortcut legacy format, but \textsl{midicvt}
    does not.
 
-   So, as a "bug" fix, we want to be able to write and read
-   this information properly in \textsl{Sequencer64}.
-   We also need to be able to read legacy Seq24 MIDI files.
+   So, as a "bug" fix, we now write and read
+   this information properly in \textsl{Sequencer64}; it is now
+   preceded by the \texttt{0xFF 0x7F} marker..
+   We also need to be able to read legacy Seq24 MIDI files, so that ability has
+   been preserved in \textsl{Sequencer64}..
 
    Anyway, at this point, we have the \textbf{c\_midictrl} information now.
    Next, we read a long value, seqs.  It is 0.
